--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -8,20 +8,36 @@
 }
 
 a{text-decoration: none;}
-.text-muted {
-    color: #2b303d!important;
-}
+.text-muted { color: #2b303d!important;}
 .bg-dark {
-    background-color: #2b303d!important;
+    background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%)!important;
+    background-blend-mode: multiply!important;
 }
-.bg-primary {
-    background-color: #ffd600!important;
+.bg-primary { background-color: #ffd600!important;}
+.bg-light { background-color: #eef7ff!important;}
+.navbar-dark .navbar-toggler {
+    color: #fff!important;
+    border-color: #ffd600!important;
+    border-width: 2px;
+    border-radius: 50%!important;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    padding: 8px;
 }
-.bg-light {
-    background-color: #eef7ff!important;
+.navbar-toggler:focus{ box-shadow: none!important;}
+.navbar-dark .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 214, 0, 10%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
+.text-primary{color:#ffd600!important;}
+
 .card-img-top {
     width: 100%;
     height: 15vw;
     object-fit: contain;
 }
+footer{
+    font-size:.95rem!important;
+}
+
